--- a/views/home.html
+++ b/views/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>Donuts :D</title>
+    <title>Donuts >:D</title>
 </head>
 <body>
 <div class="container">
