added face to body h1

--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Welcome to My Donuts Page</h1>
+    <h1>Welcome to My Donuts Page >:D</h1>
     <br><br>
 </div>
 </body>
