--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,7 @@
 <body>
 <div class="container">
     <h1>Welcome to My Donuts Page >:D</h1>
+    <p>paragraph added by nathan</p>
     <br><br>
 </div>
 </body>
