--- a/views/home.html
+++ b/views/home.html
@@ -13,6 +13,8 @@
 <body>
 <div class="container">
     <h1>Welcome to My Donuts Page >:D</h1>
+
+    <p>this is my paragraph which is way better than Nathan's ~ Joshua</p>
     <br><br>
 </div>
 </body>
